--- a/Optimum Coding Assesment/View/MovieItemContentView.xib
+++ b/Optimum Coding Assesment/View/MovieItemContentView.xib
@@ -17,31 +17,34 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="528" height="233"/>
+        <view contentMode="scaleToFill" misplaced="YES" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="632" height="555"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="ntC-JO-uX5">
-                    <rect key="frame" x="10" y="69" width="508" height="120"/>
+                    <rect key="frame" x="10" y="69" width="561" height="276"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="movieclapper" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="dkm-Wj-HId">
-                            <rect key="frame" x="0.0" y="-2" width="105.66666666666667" height="121"/>
+                            <rect key="frame" x="0.0" y="-2" width="116.33333333333333" height="277"/>
                             <color key="tintColor" systemColor="secondaryLabelColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="100" id="WuV-E0-puv"/>
+                            </constraints>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="s8g-qv-PwN">
-                            <rect key="frame" x="117.66666666666666" y="0.0" width="390.33333333333337" height="120"/>
+                            <rect key="frame" x="128.33333333333334" y="0.0" width="432.66666666666663" height="276"/>
                             <subviews>
-                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="I6h-eN-x9p">
-                                    <rect key="frame" x="0.0" y="36.666666666666671" width="390.33333333333331" height="46.666666666666671"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="I6h-eN-x9p">
+                                    <rect key="frame" x="0.0" y="114.66666666666667" width="432.66666666666669" height="46.666666666666671"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bf4-bZ-AAe">
-                                            <rect key="frame" x="347" y="0.0" width="43.333333333333314" height="20.333333333333332"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bf4-bZ-AAe">
+                                            <rect key="frame" x="0.0" y="0.0" width="43.333333333333336" height="20.333333333333332"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ISV-mq-ck9">
-                                            <rect key="frame" x="349" y="26.333333333333329" width="41.333333333333314" height="20.333333333333329"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ISV-mq-ck9">
+                                            <rect key="frame" x="0.0" y="26.333333333333329" width="41.333333333333336" height="20.333333333333329"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <color key="textColor" systemColor="secondaryLabelColor"/>
                                             <nil key="highlightedColor"/>
@@ -51,6 +54,10 @@
                             </subviews>
                         </stackView>
                     </subviews>
+                    <constraints>
+                        <constraint firstItem="dkm-Wj-HId" firstAttribute="top" secondItem="ntC-JO-uX5" secondAttribute="top" constant="12" id="JWo-Fd-Y0Y"/>
+                        <constraint firstAttribute="bottom" secondItem="dkm-Wj-HId" secondAttribute="bottom" constant="12" id="QuD-Av-Pi1"/>
+                    </constraints>
                 </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
@@ -63,7 +70,7 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="ntC-JO-uX5" secondAttribute="bottom" constant="10" id="lp2-fa-OVD"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="222.90076335877862" y="-233.45070422535213"/>
+            <point key="canvasLocation" x="302.29007633587787" y="-120.07042253521128"/>
         </view>
     </objects>
     <resources>
